<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnBoarding1Activity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        app:srcCompat="@drawable/onboarding1" />

    <com.google.android.material.slider.Slider
        android:id="@+id/seekBar"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"

        android:value="0"
        android:valueFrom="0"
        android:valueTo="2"
        android:stepSize="1"

        app:thumbRadius="5dp"
        app:tickRadiusActive="5dp"
        app:tickRadiusInactive="5dp"
        app:haloRadius="1dp"

        app:tickColorInactive="?attr/colorOnSecondaryContainer"
        app:trackColorActive="@color/orange"
        app:thumbColor="@color/orange"
        app:trackColor="?attr/colorOnBackground"

        android:enabled="false" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/confidence_in_your_words"
        android:textColor="?attr/colorOnSurface"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredoka_medium"

        android:text="@string/with_conversation"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        android:gravity="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/fredoka_medium"
        android:padding="16dp"

        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        android:onClick="changeActivity" />

    <TextView
        android:id="@+id/skip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_onboarding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"

        android:fontFamily="@font/fredoka_medium"
        android:textSize="15sp"
        android:textColor="?attr/colorOnSurface"
        android:onClick="skip" />

</androidx.constraintlayout.widget.ConstraintLayout>